--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>Example TOC</title>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
